# Arkanoid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Arkanoid/: AABB.cpp  AABB.h  App.cpp  App.h  Arkanoid.sln  Arkanoid.vcxproj  Arkanoid.vcxproj.filters  Ball.cpp  Ball.h  BonusScore.cpp  BonusScore.h  Brick.cpp  Brick.h  Entity.cpp  Entity.h  Functions.cpp  Functions.h  GameManager.cpp  GameManager.h  Math.cpp  Math.h  Player.cpp  Player.h  ResourceManager.cpp  ResourceManager.h  ScoreManager.cpp  ScoreManager.h  Structs.h  main.cpp  test.cpp
includes/: AABB.h  App.h  Ball.h  Entity.h  Functions.h  GameManager.h  Math.h  Player.h
sources/: AABB.cpp  App.cpp  Ball.cpp  Entity.cpp  Functions.cpp  GameManager.cpp  Player.cpp  ResourceManager.cpp  main.cpp
